# ddzlib

./: .gitignore  Cargo.toml  README.md
src/: file_type.rs  lib.rs  tile_entry.rs  tile_header.rs  tileset.rs  tileset_meta.rs  util.rs  zoom_level.rs  zoom_level_entry.rs
tests/: test_samples.rs
tests/maps/12062/: K_12062.idat  K_12062.xml
tests/maps/12062/layers/: 12062_001_010_K_ADD_Gradnetz_txt.idat  12062_002_020_T_ADD_VorherrschendeWinde_txt.idat  12062_003_050_T_ADD_Orte_txt.idat  12062_004_050_K_ADD_Orte_sig.idat  12062_005_020_K_ADD_VorherrschendeWinde_lin.idat  12062_006_040_K_ADD_InnertropischeKonvergenzzone_lin.idat  12062_007_010_K_ADD_Gradnetz_lin.idat  12062_008_060_K_MULT_Staatsgrenzen_lin.idat  12062_009_000_K_ADD_Grundkarte_lin.idat  12062_010_030_K_ADD_Temperaturen_fla.idat  12062_011_000_K_ADD_Grundkarte_fla.idat
