[package]
name = "ddzlib"
version = "0.1.0"
repository = "https://github.com/justjanne/ddzlib/"
authors = ["Janne Mareike Koschinski <mail@justjanne.de>"]
description = "Library to read DDZ tileset files"
readme = "README.md"
license = "MPL-2.0"
keywords = ["atlas", "map", "parser"]
categories = ["encoding"]
edition = "2024"
exclude = ["/.*", "/tests"]

[dependencies]
nom = "7.1.3"
log = "0.4.20"

[lints.rust]
unsafe_code = "forbid"
